# lab06

./: file1.txt
.github/workflows/: DEB.yml  DMG.yml  MSI.yml  RPM.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
